# MyVeryFirstGame

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
sdl/include/SDL2/: SDL_audio.h  SDL_blendmode.h  SDL_gesture.h  SDL_joystick.h  SDL_main.h  SDL_rwops.h  SDL_surface.h
src/: BloodSplash.cpp  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Particle.cpp  Player.cpp  Player.h
